base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: koo-api-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      deployment: koo-api
  template:
    metadata:
      labels:
        deployment: koo-api
    spec:
      containers:
      - name: koo-api-container
        image: koogg/koo-api:latest
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 20
          periodSeconds: 5
        readinessProbe:
          httpGet:
          path: /actuator/health
          port: 8080
        initialDelaySeconds: 20
        periodSeconds: 5
